// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/time-picker/demo/12hours.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker "
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select time
            </div>
            <input
              class="ant-input ant-time-picker-input"
              id=""
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <i
              class="icon icon-av_timer ant-time-picker-icon"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-time-picker "
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select time
            </div>
            <input
              class="ant-input ant-time-picker-input"
              id=""
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <i
              class="icon icon-av_timer ant-time-picker-icon"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-time-picker "
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select time
            </div>
            <input
              class="ant-input ant-time-picker-input"
              id=""
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <i
              class="icon icon-av_timer ant-time-picker-icon"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/addon.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <span
    class="ant-input-wrapper ant-input-has-suffix"
  >
    <div
      class="ant-input-content"
    >
      <div
        class="ant-input-rendered-wrapper"
      >
        <div
          class="ant-input-rendered"
        >
          <div
            class="ant-input-placeholder"
          >
            Select time
          </div>
          <input
            class="ant-input ant-time-picker-input"
            id=""
            readonly=""
            type="text"
            value=""
          />
        </div>
        <span
          class="ant-input-suffix"
        >
          <i
            class="icon icon-av_timer ant-time-picker-icon"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-input-underline"
    >
      <span
        class="ant-input-ripple"
      />
    </div>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/basic.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <span
    class="ant-input-wrapper ant-input-has-label ant-input-has-suffix"
  >
    <div
      class="ant-input-content"
    >
      <div
        class="ant-input-label"
      >
        时间选择框
      </div>
      <div
        class="ant-input-rendered-wrapper"
      >
        <div
          class="ant-input-rendered"
        >
          <div
            class="ant-input-placeholder"
          >
            Select time
          </div>
          <input
            class="ant-input ant-time-picker-input"
            id=""
            readonly=""
            type="text"
            value=""
          />
        </div>
        <span
          class="ant-input-suffix"
        >
          <i
            class="icon icon-av_timer ant-time-picker-icon"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-input-underline"
    >
      <span
        class="ant-input-ripple"
      />
    </div>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/disabled.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <span
    class="ant-input-wrapper ant-input-disabled ant-input-has-suffix"
  >
    <div
      class="ant-input-content"
    >
      <div
        class="ant-input-rendered-wrapper"
      >
        <div
          class="ant-input-rendered"
        >
          <div
            class="ant-input-placeholder"
          >
            Select time
          </div>
          <input
            class="ant-input ant-time-picker-input"
            disabled=""
            id=""
            readonly=""
            type="text"
            value="12:08:23"
          />
        </div>
        <span
          class="ant-input-suffix"
        >
          <i
            class="icon icon-av_timer ant-time-picker-icon"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-input-underline"
    >
      <span
        class="ant-input-ripple"
      />
    </div>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/hide-column.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <span
    class="ant-input-wrapper ant-input-has-suffix"
  >
    <div
      class="ant-input-content"
    >
      <div
        class="ant-input-rendered-wrapper"
      >
        <div
          class="ant-input-rendered"
        >
          <div
            class="ant-input-placeholder"
          >
            Select time
          </div>
          <input
            class="ant-input ant-time-picker-input"
            id=""
            readonly=""
            type="text"
            value="12:08"
          />
        </div>
        <span
          class="ant-input-suffix"
        >
          <i
            class="icon icon-av_timer ant-time-picker-icon"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-input-underline"
    >
      <span
        class="ant-input-ripple"
      />
    </div>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/interval-options.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <span
    class="ant-input-wrapper ant-input-has-suffix"
  >
    <div
      class="ant-input-content"
    >
      <div
        class="ant-input-rendered-wrapper"
      >
        <div
          class="ant-input-rendered"
        >
          <div
            class="ant-input-placeholder"
          >
            Select time
          </div>
          <input
            class="ant-input ant-time-picker-input"
            id=""
            readonly=""
            type="text"
            value=""
          />
        </div>
        <span
          class="ant-input-suffix"
        >
          <i
            class="icon icon-av_timer ant-time-picker-icon"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-input-underline"
    >
      <span
        class="ant-input-ripple"
      />
    </div>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/size.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker ant-time-picker-large"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select time
            </div>
            <input
              class="ant-input ant-time-picker-input"
              id=""
              readonly=""
              type="text"
              value="12:08:23"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <i
              class="icon icon-av_timer ant-time-picker-icon"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-time-picker "
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select time
            </div>
            <input
              class="ant-input ant-time-picker-input"
              id=""
              readonly=""
              type="text"
              value="12:08:23"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <i
              class="icon icon-av_timer ant-time-picker-icon"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-time-picker ant-time-picker-small"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select time
            </div>
            <input
              class="ant-input ant-time-picker-input"
              id=""
              readonly=""
              type="text"
              value="12:08:23"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <i
              class="icon icon-av_timer ant-time-picker-icon"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/value.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <span
    class="ant-input-wrapper ant-input-has-suffix"
  >
    <div
      class="ant-input-content"
    >
      <div
        class="ant-input-rendered-wrapper"
      >
        <div
          class="ant-input-rendered"
        >
          <div
            class="ant-input-placeholder"
          >
            Select time
          </div>
          <input
            class="ant-input ant-time-picker-input"
            id=""
            readonly=""
            type="text"
            value=""
          />
        </div>
        <span
          class="ant-input-suffix"
        >
          <i
            class="icon icon-av_timer ant-time-picker-icon"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-input-underline"
    >
      <span
        class="ant-input-ripple"
      />
    </div>
  </span>
</span>
`;
